--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -225,15 +225,12 @@ kube-prometheus-stack:
         resolve_timeout: 5m
       route:
         group_by: ['severity', 'clusterName']
-        group_wait: 30s
+        group_wait: 10s
         group_interval: 5m
-        repeat_interval: 6h
+        repeat_interval: 4h
         routes:
         - matchers:
-          - alertname = Watchdog
-          receiver: 'null'
-        - matchers:
-          - alertname = InfoInhibitor
+          - severity = none
           receiver: 'null'
       inhibit_rules:
       - equal:
@@ -256,6 +253,11 @@ kube-prometheus-stack:
         - alertname = InfoInhibitor
         target_matchers:
         - severity = info
+      # Disable cluster overcommiy alerts if we have cluster autoscaler available
+      - source_matchers:
+        - alertname = ClusterAutoscalerNodeGroupsEnabled
+        target_matchers:
+        - alertname =~ "KubeCPUOvercommit|KubeMemoryOvercommit"
     alertmanagerSpec:
       # externalUrl:
       logFormat: json
