--- a/charts/kubezero-argocd/values.yaml
+++ b/charts/kubezero-argocd/values.yaml
@@ -86,6 +86,7 @@ argo-cd:
       server.insecure: true
       server.enable.gzip: true
 
+  controller:
     metrics:
       enabled: false
       serviceMonitor:
