Latest RabbitMQ tweaks

--- a/charts/kubezero-mq/templates/rabbitmq/istio-service.yaml
+++ b/charts/kubezero-mq/templates/rabbitmq/istio-service.yaml
@@ -34,4 +34,13 @@ spec:
         port:
           number: 1883
   {{- end }}
+  {{- if .Values.rabbitmq.istio.mqtt }}
+  - match:
+    - port: 1883
+    route:
+    - destination:
+        host: rabbitmq
+        port:
+          number: 1883
+  {{- end }}
 {{- end }}
