--- a/charts/kubezero-ci/values.yaml
+++ b/charts/kubezero-ci/values.yaml
@@ -121,19 +121,19 @@ jenkins:
                       numToKeepStr: "10"
 
     installPlugins:
-      - kubernetes:3802.vb_b_600831fcb_3
+      - kubernetes:3883.v4d70a_a_a_df034
       - workflow-aggregator:581.v0c46fa_697ffd
       - git:5.0.0
       - basic-branch-build-strategies:71.vc1421f89888e
-      - pipeline-graph-view:144.vf3924feb_7e35
-      - pipeline-stage-view:2.28
+      - pipeline-graph-view:154.v52138b_cb_557e
+      - pipeline-stage-view:2.31
       - configuration-as-code:1569.vb_72405b_80249
       - antisamy-markup-formatter:155.v795fb_8702324
-      - prometheus:2.1.0
+      - prometheus:2.1.1
       - htmlpublisher:1.31
       - build-discarder:139.v05696a_7fe240
-      - dark-theme:262.v0202a_4c8fb_6a
-      - kubernetes-credentials-provider:1.208.v128ee9800c04
+      - dark-theme:302.vf069cb_e01486
+      - kubernetes-credentials-provider:1.209.v862c6e5fb_1ef
 
   serviceAccountAgent:
     create: true
@@ -231,7 +231,7 @@ jenkins:
 trivy:
   enabled: false
   image:
-    tag: 0.35.0
+    tag: 0.37.3
   persistence:
     enabled: true
     size: 1Gi
