--- a/charts/kubezero-ci/values.yaml
+++ b/charts/kubezero-ci/values.yaml
@@ -121,19 +121,19 @@ jenkins:
                       numToKeepStr: "10"
 
     installPlugins:
-      - kubernetes:3883.v4d70a_a_a_df034
+      - kubernetes:3910.ve59cec5e33ea_
       - workflow-aggregator:581.v0c46fa_697ffd
       - git:5.0.0
       - basic-branch-build-strategies:71.vc1421f89888e
-      - pipeline-graph-view:154.v52138b_cb_557e
-      - pipeline-stage-view:2.31
-      - configuration-as-code:1569.vb_72405b_80249
-      - antisamy-markup-formatter:155.v795fb_8702324
-      - prometheus:2.1.1
+      - pipeline-graph-view:183.v9e27732d970f
+      - pipeline-stage-view:2.32
+      - configuration-as-code:1625.v27444588cc3d
+      - antisamy-markup-formatter:159.v25b_c67cd35fb_
+      - prometheus:2.2.1
       - htmlpublisher:1.31
       - build-discarder:139.v05696a_7fe240
-      - dark-theme:302.vf069cb_e01486
-      - kubernetes-credentials-provider:1.209.v862c6e5fb_1ef
+      - dark-theme:315.va_22e7d692ea_a
+      - kubernetes-credentials-provider:1.211.vc236a_f5a_2f3c
 
   serviceAccountAgent:
     create: true
@@ -231,7 +231,7 @@ jenkins:
 trivy:
   enabled: false
   image:
-    tag: 0.37.3
+    tag: 0.39.1
   persistence:
     enabled: true
     size: 1Gi
