Some version bumps

--- a/charts/kubezero/templates/network.yaml
+++ b/charts/kubezero/templates/network.yaml
@@ -19,6 +19,14 @@ cilium:
 
   prometheus:
     enabled: {{ .Values.metrics.enabled }}
+    serviceMonitor:
+      enabled: {{ .Values.metrics.enabled }}
+
+  operator:
+    prometheus:
+      enabled: {{ .Values.metrics.enabled }}
+      serviceMonitor:
+        enabled: {{ .Values.metrics.enabled }}
 
 {{- with index .Values "network" "metallb" }}
 metallb:
