--- a/charts/kubezero-metrics/jsonnet/zdt-dashboards.yaml
+++ b/charts/kubezero-metrics/jsonnet/zdt-dashboards.yaml
@@ -4,3 +4,6 @@ folder: KubeZero
 dashboards:
 - name: home
   url: file://zdt/home.json
+- name: crio
+  url: file://zdt/crio.json
+  tags: ['kubernetes']
