Fix for snapshot controller, other tweaks

--- a/charts/kubezero-redis/templates/snapshotgroup.yaml
+++ b/charts/kubezero-redis/templates/snapshotgroup.yaml
@@ -1,5 +1,5 @@
 {{- range $ssg := .Values.snapshotgroups }}
-apiVersion: gemini.fairwinds.com/v1beta1
+apiVersion: gemini.fairwinds.com/v1
 kind: SnapshotGroup
 metadata:
   name: {{ $ssg.name }}
