--- a/charts/kubezero/templates/metrics.yaml
+++ b/charts/kubezero/templates/metrics.yaml
@@ -2,6 +2,11 @@
 
 {{- if .global.aws }}
 alertmanager:
+  alertmanagerSpec:
+    podMetadata:
+      annotations:
+        kubezero.com/sns_forwarder_ARN_PREFIX: "arn:aws:sns:{{ .global.aws.region }}:{{ .global.aws.accountId }}:"
+        kubezero.com/sns_forwarder_AWS_ROLE_ARN: "arn:aws:iam::{{ .global.aws.accountId }}:role/{{ .global.aws.region }}.{{ .global.clusterName }}.alertmanager"
   config:
     receivers:
       - name: 'null'
@@ -17,6 +22,15 @@ prometheus:
       awsAccount: '{{ .global.aws.accountId }}'
       awsRegion: {{ .global.aws.region }}
       clusterName: {{ .global.clusterName }}
+    containers:
+      - name: prometheus
+        env:
+          - name: AWS_ROLE_ARN
+            value: "arn:aws:iam::{{ .global.aws.accountId }}:role/{{ .global.aws.region }}.{{ .global.clusterName }}.prometheus"
+          - name: AWS_WEB_IDENTITY_TOKEN_FILE
+            value: "/var/run/secrets/sts.amazonaws.com/serviceaccount/token"
+          - name: AWS_STS_REGIONAL_ENDPOINTS
+            value: regional
     volumes:
       - name: aws-token
         projected:
