--- a/charts/kubezero-metrics/jsonnet/zdt-dashboards.yaml
+++ b/charts/kubezero-metrics/jsonnet/zdt-dashboards.yaml
@@ -7,3 +7,6 @@ dashboards:
 - name: crio
   url: file://zdt/crio.json
   tags: ['kubernetes']
+- name: docker-registry
+  url: file://zdt/docker-registry.json
+  tags: ['kubernetes', 'registry', 'ec2']
