Add default values for custom data tree

--- a/charts/kubezero/values.yaml
+++ b/charts/kubezero/values.yaml
@@ -80,6 +80,11 @@ metrics:
   istio:
     grafana: {}
     prometheus: {}
+  # our custom scrapeConfig which gets merged
+  kubezero:
+    prometheus:
+      prometheusSpec:
+        additionalScrapeConfigs: []
 
 logging:
   enabled: false
