--- a/charts/kubezero-istio/values.yaml
+++ b/charts/kubezero-istio/values.yaml
@@ -16,10 +16,8 @@ istiod:
     nodeSelector:
       node-role.kubernetes.io/control-plane: ""
     tolerations:
-    - effect: NoSchedule
-      key: node-role.kubernetes.io/master
-    - effect: NoSchedule
-      key: node-role.kubernetes.io/control-plane
+    - key: node-role.kubernetes.io/control-plane
+      effect: NoSchedule
 
     resources:
       requests:
